# munchboka-edutools

./: .buildinfo  ANIMATE_IMPLEMENTATION.md  ANIMATE_QUICKSTART.md  CLI_README.md  CNAME  DEBUGGING.md  ENDPOINT_MARKERS_EXAMPLE.md  IMPLEMENTATION_SUMMARY.md  PDF_MATH_IMPLEMENTATION.md  QUICKSTART.md  README.md  VERIFICATION_GUIDE.md  example_profiles.yml  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js  test_caption_math.md  test_cli.sh  test_function_domains.html  test_pdf_math.py
.github/workflows/: deploy_book.yml  python-publish.yml
_sources/docs/: animate.md  answer.md  cas-popup.md  circuit.md  clear.md  dev.md  dialogue.md  escape-room-2.md  escaperoom.md  example.md  exercise.md  explore.md  factor-tree.md  ggb-popup.md  ggb.md  ggbpopup.md  goals.md  hints.md  horner.md  index.md  interactive-code.md  interactive-graph.md  jeopardy-answer.md  jeopardy-question.md  jeopardy.md  multi-interactive-graph.md  pair-puzzle.md  parsons-puzzle.md  polydiv.md  popup.md  quiz-2.md  quiz-answer.md  sign-chart.md  signchart.md  solution.md  summary.md  theory.md  timed-quiz.md  timedquiz.md
_sources/examples/: animate.md  cas_popup.md  escape_room2.md  flashcards.md  ggb_popup.md  horner.md  interactive_code.md  multi_plot2_test.md  plot.md  popup.md  signchart.md  timed_quiz.md
_static/interactive/interactive_11aedae0bb6b/: deltas.json
_static/interactive/interactive_1bab19c90e43/: deltas.json
_static/interactive/interactive_3ae38f2af2b1/: deltas.json
_static/interactive/interactive_48c9ed0b4f06/: deltas.json
_static/interactive/interactive_49464a54f0cf/: metadata.json
_static/interactive/interactive_8043b856f182/: deltas.json
_static/interactive/interactive_89d2ae0998fe/: metadata.json
_static/interactive/interactive_c73a83ef9773/: deltas.json
_static/interactive/interactive_e08432e8dd6c/: deltas.json
_static/munchboka/css/: admonitions.css  figures.css  jeopardy.css  print_pdf.css  quiz.css
_static/munchboka/js/: flashcards.js  jeopardy.js
book/: _config.yml  _toc.yml  admonitions.md  dialogue.md  ggb_icon.md  index.md  parsons.md  requirements.txt  test_function_domains.md
book/docs/: answer.md  cas-popup.md  circuit.md  clear.md  dialogue.md  escape-room.md  exercise.md  flashcards.md  ggb.md  goals.md  horner.md  index.md  interactive-code.md  jeopardy-2.md  jeopardy-answer.md  jeopardy.md  multi-interactive-graph.md  multi-plot.md  multi-plot2.md  multiplot.md  pair-puzzle.md  pairpuzzle.md  parsons-puzzle.md  parsonspuzzle.md  plot.md  plot3d.md  polydiv.md  popup.md  quiz-2.md  quiz-question.md  quiz.md  room.md  signchart-2.md  signchart.md  signchart2.md  summary.md  table.md  theory.md  timed-quiz.md  turtle.md
book/examples/: admonitions.md  angle_arc_test.md  clear.md  escape_room.md  factor_tree.md  ggb.md  multi_interactive_graph.md  multi_plot.md  multi_plot2_test.md  multi_plot_annotate.md  multi_plot_point.md  multi_plot_text.md  pair_puzzle.md  parsons.md  plot.md  plot_erf_test.md  plot_line_test.md  poly_icon.md  polydiv.md  quiz.md  signchart.md  signchart2.md  turtle.md
book/examples/escape_room/: escape_room.md
book/examples/jeopardy/: jeopardy.md
book/examples/quiz/: quiz.md
docs/: animate.html  answer.html  cas-popup.html  circuit.html  clear.html  dev.html  dialogue.html  escape-room-2.html  escape-room.html  escaperoom.html  example.html  exercise.html  explore.html  factor-tree.html  flashcards.html  ggb-popup.html  ggb.html  ggbpopup.html  goals.html  hints.html  horner.html  index.html  interactive-code.html  interactive-graph.html  jeopardy-2.html  jeopardy-answer.html  jeopardy-question.html  jeopardy.html  multi-interactive-graph.html  multi-plot.html  multi-plot2.html  multiplot.html  pair-puzzle.html  pairpuzzle.html  parsons-puzzle.html  parsonspuzzle.html  pdf_math_rendering.md  plot.html  plot3d.html  polydiv.html  (+20 more)
examples/: admonitions.html  animate.html  cas_popup.html  clear.html  dialogue.html  escape_room.html  escape_room2.html  factor_tree.html  flashcards.html  ggb.html  ggb_icon.html  ggb_popup.html  horner.html  interactive_code.html  multi_plot.html  multi_plot2_test.html  multi_plot_annotate.html  multi_plot_point.html  multi_plot_text.html  pair_puzzle.html  parsons.html  plot.html  poly_icon.html  polydiv.html  popup.html  signchart.html  timed_quiz.html  turtle.html
examples/escape_room/: escape_room.html
examples/jeopardy/: jeopardy.html
examples/quiz/: quiz.html
src/munchboka_edutools/: __init__.py  _plotmath_shim.py  _version.py  munchboka.code-workspace
src/munchboka_edutools/cli/: __init__.py  build.py
src/munchboka_edutools/config/: __init__.py  profiles.py
src/munchboka_edutools/directives/: __init__.py  _plot_build.py  _plot_common.py  _plot_config.py  _plot_macros.py  _triangle.py  admonitions.py  animate.py  (+37 more)
tests/: _debug_angle.py  _debug_limits.py  _debug_tri2.py  _debug_tri3.py  test_animate.py  test_exercise_aids_icon.py  test_exercise_aids_myst_yaml_bool.py  test_implicit_curve.py  test_interactive_graph_circle.py  test_interactive_graph_triangle.py  test_jeopardy2_nested_answer.py  test_jeopardy2_plot_alignment.py  test_minimal_build.py  test_plot2_directive.py  test_plot3d2_directive.py  test_plot_build.py  test_plot_common.py  test_plot_config.py  test_plot_macros.py  test_signchart2_domain_undefined.py  test_signchart2_poles.py  test_solution_timer.py  test_svg_delta_fullsvg.py  test_table_directive.py  test_triangle_labels.py
(+80 files in other folders)
